--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
 
+* {
+  box-sizing: border-box;
+}
+
+html {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -10,12 +20,20 @@ body,td,th,p{
 body {
 	background-color: #fdfdfd;
 	margin: 0;
-	position:relative;
+  position:relative;
+  width: 100%;
 }
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
-	color: #333;
+  color: #333;
+  
 }
 a {
 	color: orange;
@@ -32,14 +50,34 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
+
+/*
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+*/
+
+body {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+
+header {
+  width: 100%;
+}
+
+main {
+  width: 100%;
+}
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  width: 100%;
 }
 #footer {
+  width: 100%;
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
@@ -51,9 +89,10 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  /*height: 80px;*/
   background-color: #252831;
   text-align:center;
+  padding: 10px;
 }
 nav h1 {
   margin: auto;
@@ -106,16 +145,17 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  /* height: 50px; */
   background-color: #3397DB;
   align-items: center;
+  padding: 10px;
 }
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0px 20px;
 }
 .filter-options select {
   background-color: white;
@@ -134,8 +174,9 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 0px 0px 0px;
   text-align: center;
+  box-sizing: border-box;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -143,10 +184,33 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 20px 20px 20px;
   text-align: left;
-  width: 270px;
+  width: 100%;
+  box-sizing: border-box;
+  /* width: 270px; */
 }
+
+@media only screen and (min-width: 650px) {
+  #restaurants-list li {
+    width: calc(50% - 30px);
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  #restaurants-list li {
+    width: calc(33.3% - 30px);
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  body {
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -259,7 +323,8 @@ nav h1 a {
 #reviews-list li {
   background-color: #fff;
     border: 2px solid #f3f3f3;
-  display: block;
+  /*display: block;*/
+  display: flex;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
