--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ html {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  background-color: #f3f3f3;
 }
 
 body,td,th,p{
@@ -191,13 +192,13 @@ nav h1 a {
   /* width: 270px; */
 }
 
-@media only screen and (min-width: 650px) {
+@media only screen and (min-width: 550px) {
   #restaurants-list li {
     width: calc(50% - 30px);
   }
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 800px) {
   #restaurants-list li {
     width: calc(33.3% - 30px);
   }
@@ -216,8 +217,8 @@ nav h1 a {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  /* min-height: 248px;*/
+  /* min-width: 100%;*/
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -251,15 +252,22 @@ nav h1 a {
   position: fixed;
   top: 0;
   width: 100%;
+  height: 80px;
   z-index: 1000;
 }
+
+.inside {
+  margin-top: 80px;
+  position: relative;
+}
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  height: 300px;
+  position: relative;
   right: 0;
-  top: 80px;
-  width: 50%;
+  /*top: 80px;*/
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
@@ -269,7 +277,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -282,7 +290,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -298,13 +306,13 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 30px 30px 30px;
+  width: 100%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -330,7 +338,7 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 100%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
