--- a/css/styles.css
+++ b/css/styles.css
@@ -106,12 +106,12 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 10px 40px 10px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
 }
 
 /* Display list items side by side */
@@ -282,10 +282,10 @@ nav h1 a {
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 16pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 0 0 25px;
   text-transform: uppercase;
   line-height: 1.1;
 }
@@ -333,6 +333,7 @@ nav h1 a {
     border: 2px solid #f3f3f3;
   /*display: block;*/
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
@@ -340,9 +341,32 @@ nav h1 a {
   position: relative;
   width: 100%;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
+  display: block;
 }
+
+#reviews-list li p.name {
+  width: 50%;
+  color: red;
+}
+
+#reviews-list li p.date {
+  width: 50%;
+  color: red;
+}
+
+#reviews-list li p.rating {
+  width: 50%;
+  color: red;
+}
+
+#reviews-list li p.comments {
+  width: 100%;
+  color: red;
+}
+
 #restaurant-hours td {
   color: #666;
 }
