--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ main {
 }
 
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #e4e4e4;
   min-height: 100%;
   width: 100%;
 }
@@ -192,26 +192,6 @@ nav h1 a {
   /* width: 270px; */
 }
 
-@media only screen and (min-width: 550px) {
-  #restaurants-list li {
-    width: calc(50% - 30px);
-  }
-}
-
-@media only screen and (min-width: 800px) {
-  #restaurants-list li {
-    width: calc(33.3% - 30px);
-  }
-}
-
-@media only screen and (min-width: 1100px) {
-  body {
-    max-width: 1100px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -275,8 +255,8 @@ nav h1 a {
   width: 100%;
 }
 .inside #footer {
-  bottom: 0;
-  position: absolute;
+  /*bottom: 0;*/
+  position: relative;
   width: 100%;
 }
 #restaurant-name {
@@ -285,15 +265,17 @@ nav h1 a {
   font-size: 16pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 0 0 25px;
+  margin: 0 0 15px;
   text-transform: uppercase;
   line-height: 1.1;
+  display: block;
+  width: 100%;
 }
 #restaurant-img {
 	width: 100%;
 }
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 10pt;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
@@ -308,15 +290,23 @@ nav h1 a {
   text-transform: uppercase;
 	width: 100%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 30px 30px 30px;
+  padding: 20px 15px 20px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#reviews-container {
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  padding: 20px 15px 20px;
   width: 100%;
 }
-#reviews-container {
-  padding: 30px 40px 80px;
-}
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -327,46 +317,163 @@ nav h1 a {
 #reviews-list {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   /*display: block;*/
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 0 0 15px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 0;
   position: relative;
   width: 100%;
+  border-radius: 20px 0px 20px 0px;
 }
 
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 10px 0 10px;
   display: block;
+}
+
+#reviews-list div.review-header {
+  width: 100%;
+  background-color: #252831;
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #reviews-list li p.name {
   width: 50%;
-  color: red;
+  color: white;
+  font-size: 16px;
 }
 
 #reviews-list li p.date {
   width: 50%;
-  color: red;
+  color: #e5e5e5;
+  text-align: right;
+}
+
+#reviews-list div.review-body {
+  width: 100%;
+  /*height: 80px;*/
+  background-color:white;
+  padding: 15px;
 }
 
 #reviews-list li p.rating {
-  width: 50%;
-  color: red;
+  color: white;
+  background-color: #d6b304;
+  padding: 5px 10px;
+  border-radius: 4px;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 #reviews-list li p.comments {
   width: 100%;
-  color: red;
+  color: #444547;
 }
 
+#restaurant-img-container {
+  width: 100%;
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px 10px 0px 0px;
+}
+
+#restaurant-info-container {
+  background-color: white;
+  width: 100%;
+  padding: 15px;
+  border-radius: 0px 0px 10px 10px;
+}
+
+#restaurant-hours {
+  width: 100%;
+  margin: 0px;
+  padding: 0;
+  border-collapse: collapse;
+}
 #restaurant-hours td {
   color: #666;
+  font-size: 10px;
+  vertical-align: top;
+}
+
+@media only screen and (min-width: 350px) {
+  #restaurant-name {
+    font-size: 1.8em;
+  }
+  #restaurant-hours td {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  #restaurants-list li {
+    width: calc(50% - 30px);
+  }
+  #restaurant-img-container {
+    width: calc(50% - 30px);
+    flex-grow: 1;
+    border-radius: 10px 0px 0px 10px;
+  }
+  #restaurant-info-container {
+    /*width: 300px;*/
+    flex-grow: 0;
+    width: auto;
+    border-radius: 0px 10px 10px 0px;
+  }
+  #reviews-list li {
+    width: calc(50% - 10px);
+  }
+  #restaurant-name {
+    font-size: 2.4em;
+  }
+  #restaurant-hours td {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (min-width: 650px) {
+  #restaurants-info-container {
+    flex-grow: 0;
+  }
+  #restaurant-hours td {
+    font-size: 12px;
+  }
+  #restaurant-name {
+    font-size: 2.8em;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  #restaurants-list li {
+    width: calc(33.3% - 30px);
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  body {
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  header {
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 }
