--- a/css/styles.css
+++ b/css/styles.css
@@ -76,16 +76,20 @@ main {
   width: 100%;
   background-color: #444;
   color: rgb(255, 255, 255);
-  font-size: 0.5rem;
+  font-size: 0.625rem;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
 }
+
+#footer a {
+  text-decoration: underline;
+}
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  /*height: 80px;*/
   background-color: #111111;
   text-align:center;
   padding: 10px;
@@ -101,36 +105,36 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 10px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 1rem;
-    margin: 0;
-    width: 100%;
+  padding: 10px 40px 10px;
+  list-style: none;
+  background-color: #eee;
+  font-size: 1rem;
+  margin: 0;
+  width: 100%;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
-    display: inline;
+  display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0222d8;
-    text-decoration: none;
+  color: #0222d8;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #2495f8;
+  text-decoration: underline;
 }
 /* ====================== Map ====================== */
 #map {
@@ -151,7 +155,6 @@ div.leaflet-control-attribution a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  /* height: 50px; */
   background-color: rgb(31, 117, 214);
   align-items: center;
   padding: 10px;
@@ -168,7 +171,6 @@ div.leaflet-control-attribution a {
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 0.75rem;
-  height: 35px;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
@@ -194,7 +196,6 @@ div.leaflet-control-attribution a {
   text-align: left;
   width: 100%;
   box-sizing: border-box;
-  /* width: 270px; */
 }
 
 #restaurants-list .restaurant-img {
@@ -231,6 +232,10 @@ div.leaflet-control-attribution a {
   text-transform: uppercase;
 }
 
+#restaurants-list li a:hover {
+  background-color: rgb(44, 2, 143);
+}
+
 /* ====================== Restaurant Details ====================== */
 .inside {
   position: relative;
@@ -238,9 +243,7 @@ div.leaflet-control-attribution a {
 
 .inside header {
   position: relative;
-  top: 0;
   width: 100%;
-  height: 80px;
   z-index: 1000;
 }
 
@@ -367,7 +370,6 @@ div.leaflet-control-attribution a {
 
 #reviews-list div.review-body {
   width: 100%;
-  /*height: 80px;*/
   background-color:white;
   padding: 15px;
 }
