--- a/css/styles.css
+++ b/css/styles.css
@@ -327,7 +327,7 @@ div.leaflet-control-attribution a {
 }
 #restaurant-container {
   border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
+  /* border-top: 1px solid #fff; */
   padding: 20px 15px 20px;
   width: 100%;
   display: flex;
